--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.10.0",
     "react-markdown": "^7.0.1",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
